--- a/main.css
+++ b/main.css
@@ -5,6 +5,7 @@
 	--personal: var(--primary);
 	--dark: #081b29;
 	--grey: #888;
+	--green: #00FF00;
 	--light: #EEE;
 	--danger: #ff5b57;
 
@@ -81,7 +82,7 @@ h4 {
 	font-size: 1.125rem;
 	padding: 1rem 1.5rem;
 	color: var(--dark);
-	background-color: #FFF;
+	background-color: var(--light);
 	border-radius: 0.5rem;
 	box-shadow: var(--shadow);
 	margin-bottom: 1.5rem;
@@ -99,7 +100,7 @@ h4 {
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	background-color: #FFF;
+	background-color: var(--light);
 	padding: 1.5rem;
 	box-shadow: var(--shadow);
 	border-radius: 0.5rem;
@@ -159,7 +160,7 @@ input[type="checkbox"] {
 }
 
 .due-date input {
-	color: #EEE;
+	color: var(--light);
 }
 
 input:checked ~ .bubble::after {
@@ -179,7 +180,7 @@ input:checked ~ .bubble::after {
 	width: 100%;
 	font-size: 1.125rem;
 	padding: 1rem 1.5rem;
-	color: #FFF;
+	color: var(--light);
 	font-weight: 700;
 	text-transform: uppercase;
 	background-color: var(--primary);
@@ -200,7 +201,7 @@ input:checked ~ .bubble::after {
 .task-list .task-item {
 	display: flex;
 	align-items: center;
-	background-color: #FFF;
+	background-color: var(--light);
 	padding: 1rem;
 	border-radius: 0.5rem;
 	box-shadow: var(--shadow);
@@ -231,7 +232,7 @@ input:checked ~ .bubble::after {
 	display: block;
 	padding: 0.5rem;
 	border-radius: 0.25rem;
-	color: #FFF;
+	color: var(--light);
 	cursor: pointer;
 	transition: 0.2s ease-in-out;
 }
@@ -264,29 +265,28 @@ input:checked ~ .bubble::after {
 	top: 0;
 	left: 0;
 	width: 100%;
-	height: 100%;
-	background-color: rgba(0, 0, 0, 0.7);
+	height: 100%;	
 	z-index: 1;
   }
   
   .modal-content {
-	background-color: #fefefe;
+	background-color: var(--green);
 	margin: 15% auto;
 	padding: 20px;
-	border: 1px solid #888;
+	border: 1px solid var(--grey);
 	width: 50%;
 	text-align: center;
   }
   
   .close {
-	color: #aaa;
+	color: var(--grey);
 	float: right;
 	font-size: 28px;
 	font-weight: bold;
   }
   
   .close:hover {
-	color: black;
+	color: var(--dark);
 	cursor: pointer;
   }
   .searchBtn{
@@ -296,8 +296,8 @@ input:checked ~ .bubble::after {
 	align-items: center;
 	justify-content: center;
 	width: 100%;
-	background-color: #EEE;
-	border: 2px solid rgb(34, 114, 233);
+	background-color: var(--light);
+	border: 2px solid var(--primary);
   }
   .searchBtn input{
 	font-size: large;
@@ -320,7 +320,7 @@ input:checked ~ .bubble::after {
 	margin: 5px;
 	padding: 3px 7px;
 	font-size: 17px;
-	background-color: #EEE;
+	background-color: var(--light);
   }
   
   .form-control-check {
